kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-id
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: app-id
      securityContext: {}
      containers:
        - name: app-id
          securityContext: {}
          image: <app-id-image>
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      imagePullSecrets:
        - name: from-terraform-ghcr-auth
