kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-id
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
